--- a/index.html
+++ b/index.html
@@ -1,39 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>dwdd 1600 assignment list page</title>
-	</head>
-	<body>
-		<h1>Arien Kujaczynski Web Essentials Assignment Page</h1>
-		<p><a href="01test">My Test Assignment</a></p>
-		
-		<h3>Module 3</h3>
-		<p><a href="03follow-along">03 Follow Along</a></p>
-		<p><a href="03hand-coding">Hand Coding Assignment</a></p>
-		
-		<h3>Module 4</h3>
-		<p><a href="04follow-along">04 Follow Along</a></p>
-		<p><a href="04intro-css">Introduction to CSS Assignment</a></p>
-		
-		<h3>Module 5</h3>
-		<p><a href="05follow-along">05 Follow Along</a></p>
-		<p><a href="05images">Images Assignment</a></p>
-		
-		<h3>Module 6</h3>
-		<p><a href="06follow-along">06 Follow Along</a></p>
-		<p><a href="06form">Web Form Assignment</a></p>
-		
-		<h3>Module 7</h3>
-		<p><a href="07follow-along">07 Follow Along</a></p>
-		<p><a href="07advanced-css">Advanced CSS</a></p>
-		
-		<h3>Module 8</h3>
-		<p><a href="08follow-along">06 Follow Along</a></p>
-		<p><a href="08media">Media Assignment</a></p>
-		
-		<h3>Optional Capstone Activity</h3>
-		<p><a href="vacation">Vacation Web Site</a></p>
-	</body>
+    <head>
+        <title>Art Through the 1800's: Home</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
+        <meta name="description" content="Learn about some different art eras from the 1800's">
+        <meta name="author" content="Arien Kujaczynski">
+    </head>
+    <body>
+        <!--- Page header beginning-->
+        <header>
+            <h1>Art Through the 1800's</h1>
+        </header>
+        <!--- Page navigation beginning-->
+        <nav>
+            <ul>
+                <li><a href="index.html">Art Through the 1800's</a></li>
+                <li><a href="romanticism.html">Romanticism</a></li>
+            </ul>
+        </nav>
+        <!--- Page content beginning-->
+        <main>
+            <h1>Home:</h1>
+            <p>During the 1800’s many artists began to rebel against the past art style and standards. There were rapid changes all around the world. The changes in art alone were incredibly dramatic. Artists were now creating works of their own without the guidance and restrictions from commissions. Perhaps this is why the art area had such a big change. With artists now doing the work they want to do, they were also exploring and experimenting. All of this led to a wide variety of movements, some short while others long and widespread.</p>
+            
+            <h2>Art Periods-</h2>
+            <ul>
+                <li><a href="romanticism.html#romanticism"><strong>Romanticism</strong></a>: Peaked around 1790-1850.</li>
+                <li><strong>Realism:</strong> Peaked around 1830-1870.</li>
+                <li><strong>Pre-Raphaelite</strong>: Peaked around 1848-1854.</li>
+                <li><strong>Impressionism</strong>: Peaked around 1870-1900.</li>
+                <li><strong>Symbolism</strong>: Peaked around 1886-1900.</li>
+                <li><strong>Post-Impressioinism</strong>: Peaked around 1886-1905.</li>
+                <li><strong>Expressionism</strong>: Peaked around 1890-1939.</li>
+                <li><strong>Art Nouveu</strong>: Peaked around 1890-1915.</li>
+            </ul>
+            
+            <h2>Popular Artists-</h2>
+            <ul>
+                <li><strong>Casper David Friedrich</strong>: German Romanticist</li>
+                <li><strong>Claude Monet</strong>: French Impressionist</li>
+                <li><strong>Edgar Degas</strong>: French Impressionist</li>
+                <li><strong>Edvard Munch</strong>: Norwegian Symbolist and Expressionist</li>
+                <li><strong>Elizabeth Nourse</strong>: American Realist</li>
+                <li><strong>Gustav Klimt</strong>: Austrian Symbolist</li>
+                <li><strong>Henriëtte Ronner</strong>: Dutch Romanticist</li>
+                <li><strong>J.M.W Turner</strong>: English Romanticist </li>
+                <li><strong>Maria Slavona</strong>: German Impressionist</li>
+                <li><strong>Paul Cézanne</strong>: French Post-Impressionist</li>
+                <li><strong>Paul Gauguin</strong>: French Post-Impressonist </li>
+                <li><strong>Vincent Van Gogh</strong>: Dutch Post-Impressionist</li>
+            </ul>
+
+        </main>
+        <!--- Page footer beginning-->
+        <footer>
+            <p>&copy; 2024 &bull; Arien Kujaczynski &bull; <a href="mailto:11021812@uvu.edu"> Email Us</a></p>
+        </footer>
+
+    </body>
 </html>
